update images w the compressed versions

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
     </style>
     <body>
         <p>Hero Images</p>
-        <img src="./images/hero image slider one.png" alt="" />
-        <img src="./images/hero image slider two.png" alt="" />
+        <img src="./images/hero image slider one.webp" alt="" />
+        <img src="./images/hero image slider two.webp" alt="" />
         <p>Franchise Images</p>
-        <img src="./images/franchise image dim.png" alt="" />
-        <img src="./images/franchise image sum.png" alt="" />
+        <img src="./images/franchise image dim.webp" alt="" />
+        <img src="./images/franchise image sum.webp" alt="" />
         <p>Prasmanan cover</p>
-        <img src="./images/prasmanan cover.png" alt="" />
+        <img src="./images/prasmanan cover.webp" alt="" />
         <p>Profile decoration</p>
-        <img src="./images/profile decoration.png" alt="" />
+        <img src="./images/profile decoration.webp" alt="" />
         <p>Reseller cover</p>
-        <img src="./images/reseller cover.png" alt="" />
+        <img src="./images/reseller cover.webp" alt="" />
         <p>Dimsum image</p>
-        <img src="./images/dimsum image 01.png" alt="" />
+        <img src="./images/dimsum image 01.webp" alt="" />
         <p>Paket frozen</p>
-        <img src="./images/gambar paket frozen one.png" alt="" />
-        <img src="./images/gambar paket frozen two.png" alt="" />
+        <img src="./images/gambar paket frozen one.webp" alt="" />
+        <img src="./images/gambar paket frozen two.webp" alt="" />
     </body>
 </html>
