menu images added

--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
         <p>Paket frozen</p>
         <img src="./images/gambar paket frozen one.webp" alt="" />
         <img src="./images/gambar paket frozen two.webp" alt="" />
+        <p>Paket</p>
+        <img src="./images/gambar menu paket 01.webp" alt="" />
+        <img src="./images/gambar menu paket 02.webp" alt="" />
     </body>
 </html>
