--- a/index.html
+++ b/index.html
@@ -13,8 +13,22 @@
             font-weight: bold;
             text-align: center;
         }
+
+        h2 {
+            font-family: sans-serif;
+            font-weight: bolder;
+            text-align: center;
+        }
+
+        body {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
     </style>
     <body>
+        <h2>WEBP's</h2>
+        <br />
         <p>Hero Images</p>
         <img src="./images/hero image slider one.webp" alt="" />
         <img src="./images/hero image slider two.webp" alt="" />
@@ -35,5 +49,31 @@
         <p>Paket</p>
         <img src="./images/gambar menu paket 01.webp" alt="" />
         <img src="./images/gambar menu paket 02.webp" alt="" />
+        <p>Backgrounds</p>
+        <img src="" alt="" />
+
+        <!-- pngs -->
+        <h2>PNGS's</h2>
+        <br />
+        <p>Hero Images</p>
+        <img src="./images/hero image slider one.png" alt="" />
+        <img src="./images/hero image slider two.png" alt="" />
+        <p>Franchise Images</p>
+        <img src="./images/franchise image dim.png" alt="" />
+        <img src="./images/franchise image sum.png" alt="" />
+        <p>Prasmanan cover</p>
+        <img src="./images/prasmanan cover.png" alt="" />
+        <p>Profile decoration</p>
+        <img src="./images/profile decoration.png" alt="" />
+        <p>Reseller cover</p>
+        <img src="./images/reseller cover.png" alt="" />
+        <p>Dimsum image</p>
+        <img src="./images/dimsum image 01.png" alt="" />
+        <p>Paket frozen</p>
+        <img src="./images/gambar paket frozen one.png" alt="" />
+        <img src="./images/gambar paket frozen two.png" alt="" />
+        <p>Paket</p>
+        <img src="./images/gambar menu paket 01.png" alt="" />
+        <img src="./images/gambar menu paket 02.png" alt="" />
     </body>
 </html>
