--- a/index.html
+++ b/index.html
@@ -75,5 +75,24 @@
         <p>Paket</p>
         <img src="./images/gambar menu paket 01.png" alt="" />
         <img src="./images/gambar menu paket 02.png" alt="" />
+
+        <p>Backgrounds</p>
+        <img src="./images/background bawah besar.png" alt="" />
+        <img src="./images/background bawah medium.png" alt="" />
+        <img src="./images/background bawah kecil.png" alt="" />
+        <br />
+        <br />
+
+        <img src="./images/pages background atas besar.png" alt="" />
+        <img src="./images/pages background atas medium.png" alt="" />
+        <img src="./images/pages background atas kecil.png" alt="" />
+
+        <img src="./images/homapege background besar.png" alt="" />
+        <img src="./images/homapege background medium.png" alt="" />
+        <img src="./images/homapege background kecil.png" alt="" />
+
+        <img src="./images/profile page background atas besar.png" alt="" />
+        <img src="./images/profile page background atas medium.png" alt="" />
+        <img src="./images/profile page background atas kecil.png" alt="" />
     </body>
 </html>
