update reseller page cover

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <img src="./images/profile decoration.png" alt="" />
         <p>Reseller cover</p>
         <img src="./images/reseller cover.png" alt="" />
+        <img src="./images/reseller cover mobile.png" alt="" />
         <p>Dimsum image</p>
         <img src="./images/dimsum image 01.png" alt="" />
         <p>Paket frozen</p>
