--- a/index.html
+++ b/index.html
@@ -95,5 +95,27 @@
         <img src="./images/profile page background atas besar.png" alt="" />
         <img src="./images/profile page background atas medium.png" alt="" />
         <img src="./images/profile page background atas kecil.png" alt="" />
+
+        <h1>TESTIMONIAL PICTURES</h1>
+        <p>@ujangburhanudin</p>
+        <img src="./images/testi picture one.png" alt="" />
+
+        <p>@rleecious</p>
+        <img src="./images/testi picture two.png" alt="" />
+
+        <p>@riri.fatmala</p>
+        <img src="./images/testi picture three.png" alt="" />
+
+        <p>@heiyika</p>
+        <img src="./images/testi picture four.png" alt="" />
+
+        <p>@kokofood.id</p>
+        <img src="./images/testi picture five.png" alt="" />
+
+        <p>@mitapratiwi15_</p>
+        <img src="./images/testi picture six.png" alt="" />
+
+        <p>@romadonaherva</p>
+        <img src="./images/testi picture seven.png" alt="" />
     </body>
 </html>
